// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogActions ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-depki3-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-6086c1-MuiButtonBase-root-MuiButton-root"
      color="primary"
      id=":r0:"
      tabindex="0"
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`DialogActions ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-jx03m8-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1srbwv2-MuiButtonBase-root-MuiButton-root"
      id=":r1:"
      tabindex="0"
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`DialogActions ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-jx03m8-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-1sctphu-MuiButtonBase-root-MuiButton-root"
      id=":r2:"
      tabindex="0"
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`DialogActions ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-jx03m8-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-eb5jj6-MuiButtonBase-root-MuiButton-root"
      id=":r3:"
      tabindex="0"
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`DialogActions ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-182y2sk-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-qfjlf1-MuiButtonBase-root-MuiButton-root"
      id=":r4:"
      tabindex="0"
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`DialogActions ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-182y2sk-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1exgwkg-MuiButtonBase-root-MuiButton-root"
      id=":r5:"
      tabindex="0"
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;
